# adsearcher

./: .gitignore  AdQuery.cpp  AdQuery.h  AdQueryTool.cpp  AdQueryTool.h  CLAUDE.md.txt  CMakeLists.txt  Common.h  ITHelper.map  ITHelper.rc  ITool.h  PROJE.md  README.md  Shell.cpp  Shell.h  ToolRegistry.h  app.manifest  build.ps1  main.cpp  resource.h  sign.ps1
.claude/: settings.local.json
